fixed the alignment issue on the match page

--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@ header{
     width:78vw;
     margin:auto;
     font-size: 0.7em;
+    max-width: 100%;
 }
 
 .match_card {
